Always show the scrollbar, to avoid flickering effects, when the number of search results change from some to no and vice versa.

--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -12,6 +12,10 @@ h2, h2 a, h2 a:hover {
 	color: #333;
 }
 
+body {
+	overflow-y: scroll;
+}
+
 body > * {
 	padding: 1em;
 }
